infra/k8s/chat-depl.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-depl
  namespace: default
  labels:
    app: chat
spec:
  selector:
    matchLabels:
      app: chat
  replicas: 1
  template:
    metadata:
      labels:
        app: chat
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: chat
          image: ayubsh/chat
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: chat-srv
  namespace: default
spec:
  selector:
    app: chat
  type: ClusterIP
  ports:
    - name: chat
      protocol: TCP
      port: 5001
      targetPort: 5001
---
