infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: chatify.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000
